[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/NerkoOneButtonFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/cruz.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/speaker.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/logout.png" type="Texture" id=5]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.75
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteLabel" type="Label" parent="Panel/GridContainer"]
margin_right = 142.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "Mute"
align = 1

[node name="LogoutLabel" type="Label" parent="Panel/GridContainer"]
margin_left = 146.0
margin_right = 288.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "Logout"
align = 1

[node name="MuteButton" type="TextureButton" parent="Panel/GridContainer"]
margin_top = 25.0
margin_right = 142.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="LogoutButton" type="TextureButton" parent="Panel/GridContainer"]
margin_left = 146.0
margin_top = 25.0
margin_right = 288.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Panel"]
anchor_left = 0.9
anchor_right = 1.0
anchor_bottom = 0.2
margin_top = 4.0
margin_bottom = 4.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton2" type="Button" parent="Panel"]
anchor_left = 0.3
anchor_top = 0.8
anchor_right = 0.7
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "Cerrar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.2
anchor_top = 0.38
anchor_right = 0.8
anchor_bottom = 0.55
popup_exclusive = true
window_title = "Logout"
dialog_text = "


¿Estás seguro de que quieres cerrar sesión?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/GridContainer/MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="pressed" from="Panel/GridContainer/LogoutButton" to="." method="_on_LogoutButton_pressed"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Panel/CloseButton2" to="." method="_on_CloseButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
